added images and basic html and css file

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 architects</title>
-    <link rel="stylesheet" href="styles/architects.css">
+    <link rel="stylesheet" href="architect.css">
 </head>
 
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h3 class="brand">G3 Architect</h3>
+        </nav>
     </header>
     <main>
 
